@@ -1,22 +1,28 @@
 package com.system.slam.service.list;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.mockito.Mockito.verify;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.when;
+
 import com.system.slam.entity.Category;
-import com.system.slam.entity.UserValueCategory;
 import com.system.slam.entity.list.UserList;
+import com.system.slam.entity.UserValueCategory;
 import com.system.slam.repository.CategoryRepository;
 import com.system.slam.repository.UserValueCategoryRepository;
 import com.system.slam.repository.list.UserListRepository;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
-import org.mockito.MockitoAnnotations;
+import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.List;
-import java.util.Optional;
-
-import static org.mockito.Mockito.*;
-
+@ExtendWith(MockitoExtension.class)
 class UserListServiceTest {
 
     @Mock
@@ -31,68 +37,65 @@ class UserListServiceTest {
     @InjectMocks
     private UserListService userListService;
 
+    private Long listId = 123L;
+    private int typeList = 10;
+    private Long categoryId = 456L;
+
     @BeforeEach
-    void setUp() {
-        MockitoAnnotations.openMocks(this);
+    void setup() {
+        // Настройка мокированных объектов
+        when(userListRepository.save(any())).thenAnswer(invocation -> invocation.getArgument(0));
+
+        when(categoryRepository.findById(categoryId))
+                .thenReturn(java.util.Optional.of(new Category()));
     }
 
     @Test
-    void testAddCategoriesToList() {
-        Long idList = 1L;
-        int typeList = 1;
-        List<Long> categoryIds = List.of(1L, 2L);
+    void testAddCategoriesToList_Success() {
+        // Подготовка
+        List<Long> categoryIds = Collections.singletonList(categoryId);
 
-        UserList userList = new UserList();
-        userList.setIdList(idList);
-        userList.setTypeList(typeList);
+        // Действие
+        userListService.addCategoriesToList(listId, typeList, categoryIds);
 
-        Category category1 = new Category();
-        Category category2 = new Category();
-
-        when(userListRepository.save(any(UserList.class))).thenReturn(userList);
-        when(categoryRepository.findById(1L)).thenReturn(Optional.of(category1));
-        when(categoryRepository.findById(2L)).thenReturn(Optional.of(category2));
-
-        userListService.addCategoriesToList(idList, typeList, categoryIds);
-
-        verify(userListRepository, times(1)).save(any(UserList.class));
-        verify(userValueCategoryRepository, times(2)).save(any(UserValueCategory.class));
+        // Проверка
+        verify(userListRepository).save(any()); // Проверяем, что метод save был вызван
+        verify(userValueCategoryRepository).save(any()); // Проверяем, что метод save был вызван
     }
 
     @Test
-    void testUpdateCategoriesForList() {
-        Long idList = 1L;
-        int typeList = 1;
-        List<Long> newCategoryIds = List.of(3L, 4L);
+    void testUpdateCategoriesForList_Success() {
+        // Подготовка
+        List<Long> oldCategoryIds = Arrays.asList(789L, 101112L); // Старые категории
+        List<Long> newCategoryIds = Arrays.asList(131415L, 161718L); // Новые категории
+        List<UserList> userLists = new ArrayList<>();
+        userLists.add(new UserList());
 
-        UserList userList = new UserList();
-        userList.setIdList(idList);
-        userList.setTypeList(typeList);
+        when(userListRepository.findAllByIdListAndTypeList(listId, typeList)).thenReturn(userLists);
 
-        when(userListRepository.findAllByIdListAndTypeList(idList, typeList)).thenReturn(List.of(userList));
+        // Действие
+        userListService.updateCategoriesForList(listId, typeList, newCategoryIds);
 
-        userListService.updateCategoriesForList(idList, typeList, newCategoryIds);
-
-        verify(userValueCategoryRepository, times(1)).deleteAllByIdUserList(userList.getIdUserList());
-        verify(userListRepository, times(1)).deleteAll(List.of(userList));
-        verify(userListRepository, times(1)).save(any(UserList.class));
-        verify(userValueCategoryRepository, times(2)).save(any(UserValueCategory.class));
+        // Проверка
+        verify(userListRepository).deleteAll(userLists); // Проверяем удаление старых списков
+        verify(userValueCategoryRepository).deleteAllByUserListIdUserList(any()); // Проверяем удаление категорий
+        verify(userListRepository).save(any()); // Проверяем создание новых списков
+        verify(userValueCategoryRepository).save(any()); // Проверяем добавление новых категорий
     }
 
     @Test
-    void testDeleteByListIdAndType() {
-        Long idList = 1L;
-        int typeList = 1;
+    void testDeleteByListIdAndType_Success() {
+        // Подготовка
+        List<UserList> userLists = new ArrayList<>();
+        userLists.add(new UserList());
 
-        UserList userList = new UserList();
-        userList.setIdList(idList);
-        userList.setTypeList(typeList);
+        when(userListRepository.findAllByIdListAndTypeList(listId, typeList)).thenReturn(userLists);
 
-        when(userListRepository.findAllByIdListAndTypeList(idList, typeList)).thenReturn(List.of(userList));
+        // Действие
+        userListService.deleteByListIdAndType(listId, typeList);
 
-        userListService.deleteByListIdAndType(idList, typeList);
-
-        verify(userValueCategoryRepository, times(1)).deleteAllByIdUserList(userList.getIdUserList());
-        verify(userListRepository, times(1)).deleteAll(List.of(userList));
+        // Проверка
+        verify(userListRepository).deleteAll(userLists); // Проверяем удаление списков
+        verify(userValueCategoryRepository).deleteAllByUserListIdUserList(any()); // Проверяем удаление категорий
     }
 }
