@@ -5,7 +5,6 @@ import com.system.slam.entity.User;
 import com.system.slam.entity.UserAddress;
 import com.system.slam.entity.list.WishList;
 import com.system.slam.repository.StatusRepository;
-import com.system.slam.repository.UserAddressRepository;
 import com.system.slam.repository.list.WishListRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -14,13 +13,15 @@ import org.mockito.Mock;
 import org.mockito.MockitoAnnotations;
 
 import java.time.LocalDateTime;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Optional;
 
 import static org.junit.jupiter.api.Assertions.*;
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.*;
 
-class WishListServiceTest {
+public class WishListServiceTest {
 
     @Mock
     private WishListRepository wishListRepository;
@@ -29,79 +30,90 @@ class WishListServiceTest {
     private StatusRepository statusRepository;
 
     @Mock
-    private UserAddressRepository userAddressRepository;
-
-    @Mock
     private UserListService userListService;
 
     @InjectMocks
     private WishListService wishListService;
 
     @BeforeEach
-    void setUp() {
+    public void setUp() {
         MockitoAnnotations.openMocks(this);
     }
 
     @Test
-    void testCreateWish() {
+    public void testCreateWish() {
         Long userId = 1L;
-        Long addressId = 1L;
+        Long addressId = 2L;
         String initialStatus = "active";
-        List<Long> categoryIds = List.of(1L, 2L);
+        List<Long> categoryIds = Arrays.asList(3L, 4L);
 
-        User user = new User(userId);
-        UserAddress userAddress = new UserAddress(addressId);
         Status status = new Status();
-        WishList wish = new WishList();
+        status.setName(initialStatus);
+
+        WishList wishList = new WishList();
+        wishList.setIdWishList(1L);
+        wishList.setUser(new User(userId));
+        wishList.setUserAddress(new UserAddress(addressId));
+        wishList.setStatus(status);
+        wishList.setCreateAt(LocalDateTime.now());
+        wishList.setUpdateAt(LocalDateTime.now());
 
         when(statusRepository.findByName(initialStatus)).thenReturn(Optional.of(status));
-        when(wishListRepository.save(any(WishList.class))).thenReturn(wish);
+        when(wishListRepository.save(any(WishList.class))).thenReturn(wishList);
 
         WishList result = wishListService.createWish(userId, addressId, initialStatus, categoryIds);
 
         assertNotNull(result);
-        assertEquals(user, result.getUser());
-        assertEquals(userAddress, result.getUserAddress());
-        assertEquals(status, result.getStatus());
-        verify(userListService, times(1)).addCategoriesToList(wish.getIdWishList(), 2, categoryIds);
+        assertEquals(userId, result.getUser().getIdUser());
+        assertEquals(addressId, result.getUserAddress().getIdUserAddress());
+        assertEquals(initialStatus, result.getStatus().getName());
+        verify(userListService).addCategoriesToList(result.getIdWishList(), 2, categoryIds);
     }
 
     @Test
-    void testUpdateWish() {
+    public void testUpdateWish() {
         Long wishId = 1L;
-        Long newAddressId = 2L;
+        Long newAddressId = 3L;
         String newStatusName = "inactive";
-        List<Long> newCategoryIds = List.of(3L, 4L);
+        List<Long> newCategoryIds = Arrays.asList(5L, 6L);
 
-        WishList wish = new WishList();
+        WishList existingWish = new WishList();
+        existingWish.setIdWishList(wishId);
+
         Status newStatus = new Status();
+        newStatus.setName(newStatusName);
 
-        when(wishListRepository.findById(wishId)).thenReturn(Optional.of(wish));
+        when(wishListRepository.findById(wishId)).thenReturn(Optional.of(existingWish));
         when(statusRepository.findByName(newStatusName)).thenReturn(Optional.of(newStatus));
-        when(wishListRepository.save(any(WishList.class))).thenReturn(wish);
+        when(wishListRepository.save(any(WishList.class))).thenReturn(existingWish);
 
         WishList result = wishListService.updateWish(wishId, newAddressId, newStatusName, newCategoryIds);
 
         assertNotNull(result);
-        assertEquals(newStatus, result.getStatus());
-        verify(userListService, times(1)).updateCategoriesForList(wish.getIdWishList(), 2, newCategoryIds);
+        assertEquals(newAddressId, result.getUserAddress().getIdUserAddress());
+        assertEquals(newStatusName, result.getStatus().getName());
+        verify(userListService).updateCategoriesForList(wishId, 2, newCategoryIds);
     }
 
     @Test
-    void testDeleteWish_PhysicalDelete() {
+    public void testDeleteWishPhysical() {
         Long wishId = 1L;
 
         wishListService.deleteWish(wishId, true);
 
-        verify(wishListRepository, times(1)).deleteById(wishId);
-        verify(userListService, times(1)).deleteByListIdAndType(wishId, 2);
+        verify(wishListRepository).deleteById(wishId);
+        verify(userListService).deleteByListIdAndType(wishId, 2);
     }
 
     @Test
-    void testDeleteWish_LogicalDelete() {
+    public void testDeleteWishLogical() {
         Long wishId = 1L;
+
         WishList wish = new WishList();
+        wish.setIdWishList(wishId);
+
         Status deletedStatus = new Status();
+        deletedStatus.setName("deleted");
 
         when(wishListRepository.findById(wishId)).thenReturn(Optional.of(wish));
         when(statusRepository.findByName("deleted")).thenReturn(Optional.of(deletedStatus));
@@ -109,7 +121,7 @@ class WishListServiceTest {
 
         wishListService.deleteWish(wishId, false);
 
-        assertEquals(deletedStatus, wish.getStatus());
-        verify(wishListRepository, times(1)).save(wish);
+        assertEquals("deleted", wish.getStatus().getName());
+        verify(wishListRepository).save(wish);
     }
 }
